# OS_Lab_programs

./: CMakeLists.txt  bankers_algorithm.c  dining_philisopher.c  producer_consumer.c
CPU_Scheduling_Algorithm/: FCFS.c  Priority.c  RoundRobin.c  SJF.c  multilevel_queue.c
File_Allocation/: Linked.c  Sequential.c
Memory_Management/: BestFit.c  FirstFit.c  MFT.c  MVT.c
Page_Replacement/: FIFO.c  LRU.c
